[systemmonitor] Rename to System Activity in desktop file for consistency

--- a/systemmonitor/org.kde.systemmonitor.desktop
+++ b/systemmonitor/org.kde.systemmonitor.desktop
@@ -2,7 +2,7 @@
 [Desktop Entry]
 Type=Application
 Exec=systemmonitor
-Name=System Monitor
+Name=System Activity
 Name[af]=Stelsel Monitor
 Name[ar]=مرقاب النظام
 Name[ast]=Supervisor del sistema
